--- a/natacha_core/Dockerfile
+++ b/natacha_core/Dockerfile
@@ -9,4 +9,4 @@ COPY . .
 
 EXPOSE 8080
 
-CMD ["uvicorn", "natacha_app:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8080"]
